--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.52MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇺🇸 美国-449.9KB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-263.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-224.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: x.uhwh.ga, port: 443, type: trojan, password: xianba2, sni: x.uhwh.ga, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.86MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11262, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
   - {name: 🇺🇸 美国-8.61MB/s(Youtube:不良林), server: 20.222.101.175, port: 80, type: vmess, uuid: fa0702f4-8ec9-48e5-9b53-a0afb7c3717e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.101.175}}
-  - {name: 🇨🇳 中国-3.71MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-241.9KB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
+  - {name: 🇨🇳 中国-206.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-449.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-263.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
