--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,8 +5,7 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-8.61MB/s(Youtube:不良林), server: 20.222.101.175, port: 80, type: vmess, uuid: fa0702f4-8ec9-48e5-9b53-a0afb7c3717e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.222.101.175}}
-  - {name: 🇺🇸 美国-241.9KB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-6.09MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11262, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
   - {name: 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
   - {name: 🇨🇳 中国-206.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
@@ -16,8 +15,7 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
@@ -26,8 +24,7 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
@@ -37,8 +34,7 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
@@ -52,8 +48,7 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
@@ -62,8 +57,7 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
@@ -73,8 +67,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
@@ -93,8 +86,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-8.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-241.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
