--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,31 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-6.09MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11262, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
-  - {name: 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-3.80MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇨🇳 中国-206.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇮🇳 印度-873.9KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-424.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +40,23 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +72,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-6.09MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-560.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-206.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
