--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,58 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-873.9KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-424.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
+  - {name: 🇷🇺 俄罗斯联邦-865.9KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-763.9KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-423.9KB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.05MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.29MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.91MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.54MB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.82MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.38MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-763.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-763.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-763.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.29MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-763.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-763.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-763.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -72,8 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-873.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-865.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-763.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-423.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
